# practical-language-models

./: LICENSE  README.md  pyproject.toml
en/: _quarto.yml  index.qmd  references.bib  references.qmd
en/chapters/: chapter1.qmd  chapter2.qmd  chapter3.qmd
en/code/chapter1/: digits.py  pyproject.toml
en/code/chapter2/: network.py  pyproject.toml
en/code/chapter3/: embeddings.py  pyproject.toml
